--- a/playbook_mysql.yaml
+++ b/playbook_mysql.yaml
@@ -5,20 +5,12 @@
   tasks:
    - name: Creer Volume
      docker_volume:
-      name: Mysqldata
-   - name: Creer network frontend
-     docker_network:
-      name: network_frontend
-   - name: Creer network backend1
-     docker_network:
-      name: network_backend1
-   - name: Creer network backend2
-     docker_network:
-      name: network_backend2
+      name: Sqldata
    - name: Conteneur Mysql
      docker_container:
       name: mysql
-      image: mysql
+      image: mysql:5.7
+      restart_policy: always
       networks:
        - name: network_backend1
        - name: network_backend2
@@ -27,4 +19,4 @@
       ports:
        - '3306:3306'
       volumes:
-       - Mysqldata:/var/lib/mysql
+       - Sqldata:/var/lib/mysql
