--- a/playbook_proxy.yaml
+++ b/playbook_proxy.yaml
@@ -7,6 +7,7 @@
      docker_container:
       name: proxy
       image: nginx:alpine
+      state: started
       networks:
        - name: network_frontend
       ports:
